schema property map is now patched